# retail-ops-agent-gcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  HANDOFF.md  LICENSE  Makefile  README.md  pyproject.toml  ssh-keygen -t ed25519 -C "your_email@example.com"  ssh-keygen -t ed25519 -C "your_email@example.com".pub
.github/workflows/: ci.yml
app/: __init__.py
app/agent/: __init__.py  citations.py  guardrails.py  planner.py  prompts.py  tools.py  vertex_adapter.py
app/api/: __init__.py  main.py
app/services/: __init__.py  anomaly_detection.py  bigquery_inventory.py  inventory_repository.py  routing_engine.py
app/tests/: test_agent.py  test_api.py  test_citations.py  test_guardrails.py  test_inventory.py  test_live_adapters.py  test_routing.py  test_vertex_adapter.py
data/: sample_inventory.csv  sample_orders.csv  sample_store_capacity.csv  synthetic_event_generator.py
docs/: architecture-diagram.html  architecture.md  demo-script.md  demo-transcript.md  design-decisions.md  discovery-questions.md  eval-methodology.md  gcp-deployment.md  native-gcp-validation.md
evals/: eval_cases.json  run_evals.py
infra/: cloudrun.Dockerfile  deploy.sh
scripts/: run_local.py  seed_bigquery.py
